fix: Make cumulative SC variant work